syntax = "proto3";

import "author.proto";

option go_package = "grpc-flutter/backend/generated/grpc;grpc";

message Book {
  int32 id = 1;
  Author author = 2;
  float price = 3;
  string cover_url = 4;
  string title = 5;
  string description = 6;
  int64 date_out = 7; // milliseconds since epoch
}
  
service BookService {
  rpc GetAllBooks(GetAllBooksParams) returns (stream Book);
  rpc GetBook(GetBookParams) returns (Book);
  rpc SearchBooks(SearchBooksParams) returns (stream Book);
}

message GetAllBooksParams {

}

message GetBookParams {
  int32 id = 1;
}

message SearchBooksParams {
  int32 id = 1;
  string author = 2;
}